# job-tracker

./: .gitignore  LICENSE  README.md  docker-compose.yml  entrypoint_web.sh  entrypoint_worker.sh  example.env  jt.json  manage.py  nginx.conf  pyproject.toml  web.Dockerfile  worker.Dockerfile
careerconnect/: admin.py  apps.py  models.py
careerconnect/migrations/: 0001_initial.py  0002_alter_employee_country.py  0003_workplace_employee_job_location_and_more.py  0004_alter_employee_phone.py  0005_jobportal.py  0006_alter_jobportal_name_alter_jobportal_website.py  0007_searchquery.py  0008_company_non_tech_company_remote.py  0009_company_email_company_phone.py  0010_alter_company_website.py  0011_visaopportunity.py  0012_alter_visaopportunity_link_1_and_more.py  0013_alter_visaopportunity_link_1_and_more.py  0014_company_is_applied_company_is_employee_checked.py  0015_employee_target.py  0016_jobportal_country_jobportal_is_remote.py
jt/: asgi.py  celery.py  gunicorn.conf.py  settings.py  urls.py  wsgi.py
