[tool.poetry]
name = "job-tracker"
version = "0.1.0"
description = "Collect job information worldwide"
authors = ["Md. Abdul Alim <alim.abdul.5915@gmail.com>"]
license = "N/A"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11.6"
Django = "^5.1.1"
mysqlclient = "^2.2.4"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
gunicorn = "^23.0.0"
gevent = "^24.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
